5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1812_2574.log
== TEST (2019-06-04 23:33:11) 
-- CODE:
x=input("Digite a sneha: ")
print(len(x))
-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:33:27) 
-- CODE:
x=input("Digite a sneha: ")
for i in x:
	print(i)
-- OUTPUT:
1
2
3
A
4
5
6
b
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:34:05) 
-- CODE:
x=input("Digite a sneha: ")
for i in x:
	if(i.islower()):
		print("sim")
-- OUTPUT:
sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:35:16) 
-- CODE:
x=input("Digite a sneha: ")
j=0
m=0
for i in x:
	if(i.islower()):
		j=j+1
	if(i.isupper()):
		m=m+1
print(j,m)		
		
		
-- OUTPUT:
1 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:36:09) 
-- CODE:
x=input("Digite a sneha: ")
j=0
m=0
for i in x:
	if(i.islower()):
		j=j+1
	if(i.isupper()):
		m=m+1
if(j>0)and(m>0)and(len(x)>=8):
	print("SENHA VALIDA")
elif:
	print("SENHA INVALIDA")
		
-- ERROR:
File "XXXX", line 11
    elif:
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-04 23:36:25) 
-- CODE:
x=input("Digite a sneha: ")
j=0
m=0
for i in x:
	if(i.islower()):
		j=j+1
	if(i.isupper()):
		m=m+1
if(j>0)and(m>0)and(len(x)>=8):
	print("SENHA VALIDA")
else:
	print("SENHA INVALIDA")
		
-- OUTPUT:
SENHA VALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-04 23:36:38) 
-- CODE:
x=input("Digite a sneha: ")
j=0
m=0
for i in x:
	if(i.islower()):
		j=j+1
	if(i.isupper()):
		m=m+1
if(j>0)and(m>0)and(len(x)>=8):
	print("SENHA VALIDA")
else:
	print("SENHA INVALIDA")
		
-- EXECUTION TIME:
0.767197
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA VALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 21:22:59) 
-- CODE:
x=input("Digite a sneha: ")
j=0
m=0
for i in x:
	if(i.islower()):
		j=j+1
	if(i.isupper()):
		m=m+1
if(j>0)and(m>0)and(len(x)>=8):
	print("SENHA VALIDA")
else:
	print("SENHA INVALIDA")
		
-- EXECUTION TIME:
0.748816
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA VALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-20 23:00:22) 
-- CODE:
x=input("Digite a sneha: ")
j=0
m=0
for i in x:
	if(i.islower()):
		j=j+1
	if(i.isupper()):
		m=m+1
if(j>0)and(m>0)and(len(x)>=8):
	print("SENHA VALIDA")
else:
	print("SENHA INVALIDA")
		
-- EXECUTION TIME:
0.664194
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA VALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
